Upgrades in the CSS style

--- a/MySite.html
+++ b/MySite.html
@@ -5,31 +5,28 @@
     <meta charset="UTF-8">
     <title>Curriculo de Programador Douglas de Sá</title>
     <link rel="stylesheet" href="style.css">
+
+     <!-- Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <!-- Fonts-->
 </head>
 
 <body>
     <header>
-        <figure>
-            <img src="https://via.placeholder.com/200" width="200" height="200"
-                alt="Quadrado cinza com o numero 200 dentro" />
-        </figure>
         <h1>DOUGLAS DE SÁ</h1>
         <h2>PROGRAMADOR</h2>
     </header>
-    <nav>
-        <a href="contato.html">CONTATO</a>
-        <span>SOFT SKILLS</span>
-        <span>EDUCAÇÃO</span>
-    </nav>
     <main>
-        <section>
+        <section class="purple2">
             <header>
                 <h3>CONTATO</h3>
             </header>
             <a href="tel:+5531984341497">(31) 98434-1497</a>
             <a href="mailto:doug.xz@hotmail.com"> doug.xz@hotmail.com</a>
         </section>
-        <section>
+        <section class="purple3">
             <header>
                 <h3>SOFT SKILLS</h3>
             </header>
@@ -41,7 +38,7 @@
             </ul>
         </section>
 
-        <section>
+        <section class="purple4">
             <header>
                 <h3>EDUCAÇÃO</h3>
             </header>
@@ -68,12 +65,9 @@
             </ol>
         </section>
 
-        <footer>
-            Atualizado em 28/12/2023
-        </footer>
     </main>
     <footer>
-        Atualizado em 16/11/2023
+        Atualizado em 30/12/2023
         <nav>
             <a href="https://www.linkedin.com/in/douglas-de-santos-04085a27a/">Linkedin </a>
             <a href="https://github.com/DobakaySS">GitHub</a>
