Upgrades to CSS - Version 2

--- a/MySite.html
+++ b/MySite.html
@@ -72,7 +72,7 @@
             <a href="https://www.linkedin.com/in/douglas-de-santos-04085a27a/">Linkedin </a>
             <a href="https://github.com/DobakaySS">GitHub</a>
         </nav>
-        &copy; 2023 - Douglas de Sá Santos
+        &copy; 2023 - Douglas de Sá
     </footer>
 </body>
 
