Add some styles

--- a/MySite.html
+++ b/MySite.html
@@ -6,7 +6,7 @@
     <title>Curriculo de Programador Douglas de Sá</title>
     <link rel="stylesheet" href="style.css">
 
-     <!-- Fonts-->
+    <!-- Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -17,16 +17,21 @@
     <header>
         <h1>DOUGLAS DE SÁ</h1>
         <h2>PROGRAMADOR</h2>
+        <!-- Wave Divider-->
+        <div class="wave">
+            <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
+                preserveAspectRatio="none">
+                <path
+                    d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+                    class="shape-fill"></path>
+            </svg>
+        </div>
+        <!-- Wave Divider-->
     </header>
     <main>
-        <section class="purple2">
-            <header>
-                <h3>CONTATO</h3>
-            </header>
-            <a href="tel:+5531984341497">(31) 98434-1497</a>
-            <a href="mailto:doug.xz@hotmail.com"> doug.xz@hotmail.com</a>
-        </section>
-        <section class="purple3">
+
+        <section id="softSkills" class="purple2">
+            <img id="sax-img" src="https://placehold.co/100x100" alt="saxophone">
             <header>
                 <h3>SOFT SKILLS</h3>
             </header>
@@ -36,9 +41,10 @@
                 <li>Instrumentista de Jazz, Saxofonista e Flautista de Orquestra</li>
                 <li> Medalhista Mineiro em Tae-Kwon-Do</li>
             </ul>
+
         </section>
 
-        <section class="purple4">
+        <section id="educacao" class="purple3">
             <header>
                 <h3>EDUCAÇÃO</h3>
             </header>
@@ -63,8 +69,33 @@
                     </article>
                 </li>
             </ol>
+            <!-- Book Divider-->
+            <div class="book">
+                <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
+                    preserveAspectRatio="none">
+                    <path d="M602.45,3.86h0S572.9,116.24,281.94,120H923C632,116.24,602.45,3.86,602.45,3.86Z"
+                        class="shape-fill"></path>
+                </svg>
+            </div>
+            <!-- Book Divider-->
+
         </section>
 
+        <section id="contato" class="purple4">
+            <header>
+                <h3>CONTATO</h3>
+            </header>
+            <a href="tel:+5531984341497">(31) 98434-1497</a>
+            <a href="mailto:doug.xz@hotmail.com"> doug.xz@hotmail.com</a>
+            <!-- Arrow Divider-->
+            <div class="arrow">
+                <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
+                    preserveAspectRatio="none">
+                    <path d="M649.97 0L550.03 0 599.91 54.12 649.97 0z" class="shape-fill"></path>
+                </svg>
+            </div>
+            <!-- Arrow Divider-->
+        </section>
     </main>
     <footer>
         Atualizado em 30/12/2023
