--- a/MySite.html
+++ b/MySite.html
@@ -2,109 +2,66 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Curriculo de Programador Douglas de Sá</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Douglas de Sá - Portifólio</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="MySite.js" defer></script>
 
-    <!-- Fonts-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <!-- Fonts-->
+
+
 </head>
 
 <body>
-    <header>
-        <h1>DOUGLAS DE SÁ</h1>
-        <h2>PROGRAMADOR</h2>
-        <!-- Wave Divider-->
-        <div class="wave">
-            <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
-                preserveAspectRatio="none">
-                <path
-                    d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
-                    class="shape-fill"></path>
-            </svg>
-        </div>
-        <!-- Wave Divider-->
-    </header>
-    <main>
+  <header>
+    <h1 data-value="PROGRAMADOR_">DOUGLAS..SÁ_</h1>
+  </header>
+  <main>
+    <section id="softSkills">
 
-        <section id="softSkills" class="purple2">
-            <img id="sax-img" src="https://placehold.co/100x100" alt="saxophone">
-            <header>
-                <h3>SOFT SKILLS</h3>
-            </header>
+      <h3>SOFT SKILLS</h3>
+
+      <ul>
+        <li>Fui monitor no IFMG-OB de Programação II</li>
+        <li>Graduando em Filosofia na UFMG, estudante de Lógica Clássica</li>
+        <li>Instrumentista de Jazz, Saxofonista e Flautista de Orquestra</li>
+        <li> Medalhista Mineiro em Tae-Kwon-Do</li>
+      </ul>
+
+    </section>
+
+    <section id="educacao">
+
+      <h3>EDUCAÇÃO</h3>
+
+      <ol>
+        <li>
+          <article>
+            <h4>Técnico em Informática</h4>
             <ul>
-                <li>Fui monitor no IFMG-OB de Programação II</li>
-                <li>Graduando em Filosofia na UFMG, estudante de Lógica Clássica</li>
-                <li>Instrumentista de Jazz, Saxofonista e Flautista de Orquestra</li>
-                <li> Medalhista Mineiro em Tae-Kwon-Do</li>
+              <li> Instituto Federal de Minas Gerais</li>
+              <li> 2013-2015 Curso concluído, com foco em programação e desenvolvimento de Software.</li>
             </ul>
-
-        </section>
-
-        <section id="educacao" class="purple3">
-            <header>
-                <h3>EDUCAÇÃO</h3>
-            </header>
-            <ol>
-                <li>
-                    <article>
-                        <h4>Técnico em Informática</h4>
-                        <ul>
-                            <li> Instituto Federal de Minas Gerais</li>
-                            <li> 2013-2015 Curso concluído, com foco em programação e desenvolvimento de Software.</li>
-                        </ul>
-                    </article>
-                </li>
-                <li>
-                    <article>
-                        <h4>Bacharel em Filosofia (Graduando)</h4>
-                        <ul>
-                            <li> Universidade Federal de Minas Gerais</li>
-                            <li>2019- 2024/1 (Previsão de Conclusão) Estudante na área de Filosofia da Mente com foco em
-                                Filosofia das Emoções e Filosofia da Inteligência Artificial.</li>
-                        </ul>
-                    </article>
-                </li>
-            </ol>
-            <!-- Book Divider-->
-            <div class="book">
-                <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
-                    preserveAspectRatio="none">
-                    <path d="M602.45,3.86h0S572.9,116.24,281.94,120H923C632,116.24,602.45,3.86,602.45,3.86Z"
-                        class="shape-fill"></path>
-                </svg>
-            </div>
-            <!-- Book Divider-->
-
-        </section>
-
-        <section id="contato" class="purple4">
-            <header>
-                <h3>CONTATO</h3>
-            </header>
-            <a href="tel:+5531984341497">(31) 98434-1497</a>
-            <a href="mailto:doug.xz@hotmail.com"> doug.xz@hotmail.com</a>
-            <!-- Arrow Divider-->
-            <div class="arrow">
-                <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
-                    preserveAspectRatio="none">
-                    <path d="M649.97 0L550.03 0 599.91 54.12 649.97 0z" class="shape-fill"></path>
-                </svg>
-            </div>
-            <!-- Arrow Divider-->
-        </section>
-    </main>
-    <footer>
-        Atualizado em 30/12/2023
-        <nav>
-            <a href="https://www.linkedin.com/in/douglas-de-santos-04085a27a/">Linkedin </a>
-            <a href="https://github.com/DobakaySS">GitHub</a>
-        </nav>
-        &copy; 2023 - Douglas de Sá
-    </footer>
+          </article>
+        </li>
+        <li>
+          <article>
+            <h4>Bacharel em Filosofia (Graduando)</h4>
+            <ul>
+              <li> Universidade Federal de Minas Gerais</li>
+              <li>2019- 2024/1 (Previsão de Conclusão) Estudante na área de Filosofia da Mente com foco em
+                Filosofia das Emoções e Filosofia da Inteligência Artificial.</li>
+            </ul>
+          </article>
+        </li>
+      </ol>
+    </section>
+  </main>
+  <footer>
+    Atualizado em 06/01/2024
+    &copy; 2024 - Douglas de Sá
+</footer>
 </body>
+
 
 </html>
