Add a blob and a blur effect

--- a/MySite.html
+++ b/MySite.html
@@ -2,65 +2,68 @@
 <html lang="pt-br">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Douglas de Sá - Portifólio</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="MySite.js" defer></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Douglas de Sá - Portifólio</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="MySite.js" defer></script>
 
 
 
 </head>
 
 <body>
-  <header>
-    <h1 data-value="PROGRAMADOR_">DOUGLAS..SÁ_</h1>
-  </header>
-  <main>
-    <section id="softSkills">
+    <div id="blob"></div>
+    <div id="blur"></div>
+    <header>
+        <h1 data-value="PROGRAMADOR_">DOUGLAS..SÁ_</h1>
+    </header>
+    <main>
+        <section class="onTop" id="softSkills">
 
-      <h3>SOFT SKILLS</h3>
+            <h3>SOFT SKILLS</h3>
 
-      <ul>
-        <li>Fui monitor no IFMG-OB de Programação II</li>
-        <li>Graduando em Filosofia na UFMG, estudante de Lógica Clássica</li>
-        <li>Instrumentista de Jazz, Saxofonista e Flautista de Orquestra</li>
-        <li> Medalhista Mineiro em Tae-Kwon-Do</li>
-      </ul>
-
-    </section>
-
-    <section id="educacao">
-
-      <h3>EDUCAÇÃO</h3>
-
-      <ol>
-        <li>
-          <article>
-            <h4>Técnico em Informática</h4>
             <ul>
-              <li> Instituto Federal de Minas Gerais</li>
-              <li> 2013-2015 Curso concluído, com foco em programação e desenvolvimento de Software.</li>
+                <li>Fui monitor no IFMG-OB de Programação II</li>
+                <li>Graduando em Filosofia na UFMG, estudante de Lógica Clássica</li>
+                <li>Instrumentista de Jazz, Saxofonista e Flautista de Orquestra</li>
+                <li> Medalhista Mineiro em Tae-Kwon-Do</li>
             </ul>
-          </article>
-        </li>
-        <li>
-          <article>
-            <h4>Bacharel em Filosofia (Graduando)</h4>
-            <ul>
-              <li> Universidade Federal de Minas Gerais</li>
-              <li>2019- 2024/1 (Previsão de Conclusão) Estudante na área de Filosofia da Mente com foco em
-                Filosofia das Emoções e Filosofia da Inteligência Artificial.</li>
-            </ul>
-          </article>
-        </li>
-      </ol>
-    </section>
-  </main>
-  <footer>
-    Atualizado em 06/01/2024
-    &copy; 2024 - Douglas de Sá
-</footer>
+
+        </section>
+
+        <section class="onTop" id="educacao">
+
+            <h3>EDUCAÇÃO</h3>
+
+            <ol>
+                <li>
+                    <article>
+                        <h4>Técnico em Informática</h4>
+                        <ul>
+                            <li> Instituto Federal de Minas Gerais</li>
+                            <li> 2013-2015 Curso concluído, com foco em programação e desenvolvimento de Software.</li>
+                        </ul>
+                    </article>
+                </li>
+                <li>
+                    <article>
+                        <h4>Bacharel em Filosofia (Graduando)</h4>
+                        <ul>
+                            <li> Universidade Federal de Minas Gerais</li>
+                            <li>2019- 2024/1 (Previsão de Conclusão) Estudante na área de Filosofia da Mente com foco em
+                                Filosofia das Emoções e Filosofia da Inteligência Artificial.</li>
+                        </ul>
+                    </article>
+                </li>
+            </ol>
+        </section>
+        <footer class="onTop">
+            Atualizado em 06/01/2024
+            &copy; 2024 - Douglas de Sá
+        </footer>
+    </main>
+    
 </body>
 
 
