feat: added sections

--- a/MySite.html
+++ b/MySite.html
@@ -19,9 +19,75 @@
         <h1 data-value="PROGRAMADOR_">DOUGLAS..SÁ_</h1>
     </header>
     <main>
+        <section class="onTop" id="AboutMe">
+
+            <h1 data-value="AMHOPDAZR">SOBRE MIM</h1>
+
+            <p>Olá! Me chamo Douglas. Minhas especialidades inclui as linguagens Java, Javascript, CSS e Angular.
+                Sou estudante insaciável, sempre em busca de aprimoramento e aprendizado em novas tecnologias
+                visando aprimorar meu conhecimento multidisciplinar</p>
+
+        </section>
+        <section class="onTop" id="Projects">
+            <h1>PROJETOS</h1>
+
+            <div id="cards">
+                <div class="card">
+                    <div class="card-content">
+                        <div class="card-image">
+                            <i class="fa-duotone fa-apartment"></i>
+                        </div>
+                        <div class="card-info-wrapper">
+                            <div class="card-info">
+                                <i class="fa-duotone fa-apartment"></i>
+                                <div class="card-info-title">
+                                    <h3>Dobakay Computers</h3>
+                                    <h4>Front-end de um market place feito com angular</h4>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-content">
+                        <div class="card-image">
+                            <i class="fa-duotone fa-unicorn"></i>
+                        </div>
+                        <div class="card-info-wrapper">
+                            <div class="card-info">
+                                <i class="fa-duotone fa-unicorn"></i>
+                                <div class="card-info-title">
+                                    <h3>Hábitos 2024</h3>
+                                    <h4>Um site feito para registar horas de prática</h4>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-content">
+                        <div class="card-image">
+                            <i class="fa-duotone fa-blender-phone"></i>
+                        </div>
+                        <div class="card-info-wrapper">
+                            <div class="card-info">
+                                <i class="fa-duotone fa-blender-phone"></i>
+                                <div class="card-info-title">
+                                    <h3>TaskApp</h3>
+                                    <h4>Aplicativo em java para registrar tarefas</h4>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+        </section>
         <section class="onTop" id="softSkills">
 
-            <h3>SOFT SKILLS</h3>
+            <h1>SOFT SKILLS</h1>
 
             <ul>
                 <li>Fui monitor no IFMG-OB de Programação II</li>
@@ -34,12 +100,12 @@
 
         <section class="onTop" id="educacao">
 
-            <h3>EDUCAÇÃO</h3>
+            <h1>EDUCAÇÃO</h1>
 
             <ol>
                 <li>
                     <article>
-                        <h4>Técnico em Informática</h4>
+                        <h2>Técnico em Informática</h2>
                         <ul>
                             <li> Instituto Federal de Minas Gerais</li>
                             <li> 2013-2015 Curso concluído, com foco em programação e desenvolvimento de Software.</li>
@@ -48,7 +114,7 @@
                 </li>
                 <li>
                     <article>
-                        <h4>Bacharel em Filosofia (Graduando)</h4>
+                        <h2>Bacharel em Filosofia (Graduando)</h2>
                         <ul>
                             <li> Universidade Federal de Minas Gerais</li>
                             <li>2019- 2024/1 (Previsão de Conclusão) Estudante na área de Filosofia da Mente com foco em
@@ -63,7 +129,7 @@
             &copy; 2024 - Douglas de Sá
         </footer>
     </main>
-    
+
 </body>
 
 
