feat: added animations

--- a/MySite.html
+++ b/MySite.html
@@ -21,15 +21,13 @@
     <main>
         <section class="onTop" id="AboutMe">
 
-            <h1 data-value="AMHOPDAZR">SOBRE MIM</h1>
+            <h1 data-value="SOBRE MIM_">AMHOPDAZR_</h1>
 
-            <p>Olá! Me chamo Douglas. Minhas especialidades inclui as linguagens Java, Javascript, CSS e Angular.
-                Sou estudante insaciável, sempre em busca de aprimoramento e aprendizado em novas tecnologias
-                visando aprimorar meu conhecimento multidisciplinar</p>
+            <p>Olá, me chamo Douglas! Sou um entusiasta incansável do aprendizado, focado em aprimorar minhas habilidades nas linguagens Java, Javascript, CSS e Angular. Como estudante ávido, estou constantemente em busca de oportunidades para expandir meu conhecimento em novas tecnologias, visando fortalecer minha base multidisciplinar.</p>
 
         </section>
         <section class="onTop" id="Projects">
-            <h1>PROJETOS</h1>
+            <h1 data-value="PROJETOS_">DAVORSTT_</h1>
 
             <div id="cards">
                 <div class="card">
@@ -57,8 +55,8 @@
                             <div class="card-info">
                                 <i class="fa-duotone fa-unicorn"></i>
                                 <div class="card-info-title">
-                                    <h3>Hábitos 2024</h3>
-                                    <h4>Um site feito para registar horas de prática</h4>
+                                    <h3>TaskApp</h3>
+                                    <h4>Aplicativo em java para auxiliar com deadlines de projetos</h4>
                                 </div>
                             </div>
                         </div>
@@ -73,8 +71,8 @@
                             <div class="card-info">
                                 <i class="fa-duotone fa-blender-phone"></i>
                                 <div class="card-info-title">
-                                    <h3>TaskApp</h3>
-                                    <h4>Aplicativo em java para registrar tarefas</h4>
+                                    <h3>Hábitos 2024</h3>
+                                    <h4>Um site para acompanhar meu progresso pessoal</h4>
                                 </div>
                             </div>
                         </div>
@@ -87,20 +85,21 @@
         </section>
         <section class="onTop" id="softSkills">
 
-            <h1>SOFT SKILLS</h1>
+            <h1 data-value="SOFT SKILLS_">BOHG OKPRLL_</h1>
 
             <ul>
-                <li>Fui monitor no IFMG-OB de Programação II</li>
-                <li>Graduando em Filosofia na UFMG, estudante de Lógica Clássica</li>
-                <li>Instrumentista de Jazz, Saxofonista e Flautista de Orquestra</li>
-                <li> Medalhista Mineiro em Tae-Kwon-Do</li>
+                <li>Medalhista Mineiro em Tae-Kwon-Do</li>
+                <li>Amo correr, estou praticando a mais de 2 anos</li>
+                <li>Mestre de RPG com uma mesa de mais de 7 anos</li>
+                <li>Sou multi-instrumentisa, saxofonista de uma banda de jazz</li>
+                
             </ul>
 
         </section>
 
         <section class="onTop" id="educacao">
 
-            <h1>EDUCAÇÃO</h1>
+            <h1 data-value="EDUCAÇÃO_">MAGIASOF_</h1>
 
             <ol>
                 <li>
@@ -123,6 +122,10 @@
                     </article>
                 </li>
             </ol>
+        </section>
+        <section>
+            <h1>CONTATO</h1>
+            
         </section>
         <footer class="onTop">
             Atualizado em 06/01/2024
