feat: added links

--- a/MySite.html
+++ b/MySite.html
@@ -23,30 +23,36 @@
 
             <h1 data-value="SOBRE MIM_">AMHOPDAZR_</h1>
 
-            <p>Olá, me chamo Douglas! Sou um entusiasta incansável do aprendizado, focado em aprimorar minhas habilidades nas linguagens Java, Javascript, CSS e Angular. Como estudante ávido, estou constantemente em busca de oportunidades para expandir meu conhecimento em novas tecnologias, visando fortalecer minha base multidisciplinar.</p>
+            <p>Olá, me chamo Douglas! Sou um entusiasta incansável do aprendizado, focado em aprimorar minhas
+                habilidades nas linguagens Java, Javascript, CSS e Angular. Como estudante ávido, estou constantemente
+                em busca de oportunidades para expandir meu conhecimento em novas tecnologias, visando fortalecer minha
+                base multidisciplinar.</p>
 
         </section>
         <section class="onTop" id="Projects">
             <h1 data-value="PROJETOS_">DAVORSTT_</h1>
 
             <div id="cards">
-                <div class="card">
-                    <div class="card-content">
-                        <div class="card-image">
-                            <i class="fa-duotone fa-apartment"></i>
-                        </div>
-                        <div class="card-info-wrapper">
-                            <div class="card-info">
+                <a href="https://dobakay-computers.web.app">
+                    <div class="card">
+                        <div class="card-content">
+                            <div class="card-image">
                                 <i class="fa-duotone fa-apartment"></i>
-                                <div class="card-info-title">
-                                    <h3>Dobakay Computers</h3>
-                                    <h4>Front-end de um market place feito com angular</h4>
+                            </div>
+                            <div class="card-info-wrapper">
+                                <div class="card-info">
+                                    <i class="fa-duotone fa-apartment"></i>
+                                    <div class="card-info-title">
+                                        <h3>Dobakay Computers</h3>
+                                        <h4>Front-end de um market place feito com angular</h4>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-                <div class="card">
+                </a>
+            </div>
+            <div class="card">
+                <a href="https://github.com/DobakaySS/Taskapp">
                     <div class="card-content">
                         <div class="card-image">
                             <i class="fa-duotone fa-unicorn"></i>
@@ -61,8 +67,10 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="card">
+                </a>
+            </div>
+            <div class="card">
+                <a href="https://dobakayss.github.io/git-Habits2024/H%C3%A1bitos-%202024.html">
                     <div class="card-content">
                         <div class="card-image">
                             <i class="fa-duotone fa-blender-phone"></i>
@@ -77,7 +85,8 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </a>
+            </div>
 
 
 
@@ -92,14 +101,14 @@
                 <li>Amo correr, estou praticando a mais de 2 anos</li>
                 <li>Mestre de RPG com uma mesa de mais de 7 anos</li>
                 <li>Sou multi-instrumentisa, saxofonista de uma banda de jazz</li>
-                
+
             </ul>
 
         </section>
 
         <section class="onTop" id="educacao">
 
-            <h1 data-value="EDUCAÇÃO_">MAGIASOF_</h1>
+            <h1 data-value="EDUCAÇÃO_">MLPOQFCV_</h1>
 
             <ol>
                 <li>
@@ -122,10 +131,6 @@
                     </article>
                 </li>
             </ol>
-        </section>
-        <section>
-            <h1>CONTATO</h1>
-            
         </section>
         <footer class="onTop">
             Atualizado em 06/01/2024
