feat: added project imgs

--- a/MySite.html
+++ b/MySite.html
@@ -33,15 +33,15 @@
             <h1 data-value="PROJETOS_">DAVORSTT_</h1>
 
             <div id="cards">
-                <a href="https://dobakay-computers.web.app">
+                <a href="https://dobakay-computers.web.app" target="_blank">
                     <div class="card">
                         <div class="card-content">
                             <div class="card-image">
-                                <i class="fa-duotone fa-apartment"></i>
+                                <img width="300" height="190" src="./market-place.jpg"></img>
                             </div>
                             <div class="card-info-wrapper">
                                 <div class="card-info">
-                                    <i class="fa-duotone fa-apartment"></i>
+                                    <i ></i>
                                     <div class="card-info-title">
                                         <h3>Dobakay Computers</h3>
                                         <h4>Front-end de um market place feito com angular</h4>
@@ -52,14 +52,14 @@
                 </a>
             </div>
             <div class="card">
-                <a href="https://github.com/DobakaySS/Taskapp">
+                <a href="https://github.com/DobakaySS/Taskapp" target="_blank">
                     <div class="card-content">
                         <div class="card-image">
-                            <i class="fa-duotone fa-unicorn"></i>
+                            <img width="300" height="190" src="./habits.jpg"></img>
                         </div>
                         <div class="card-info-wrapper">
                             <div class="card-info">
-                                <i class="fa-duotone fa-unicorn"></i>
+                                <i></i>
                                 <div class="card-info-title">
                                     <h3>TaskApp</h3>
                                     <h4>Aplicativo em java para auxiliar com deadlines de projetos</h4>
@@ -70,10 +70,10 @@
                 </a>
             </div>
             <div class="card">
-                <a href="https://dobakayss.github.io/git-Habits2024/H%C3%A1bitos-%202024.html">
+                <a href="https://dobakayss.github.io/git-Habits2024/H%C3%A1bitos-%202024.html" target="_blank">
                     <div class="card-content">
                         <div class="card-image">
-                            <i class="fa-duotone fa-blender-phone"></i>
+                            <img width="300" height="190" src="./Task-App.jpg"></img>
                         </div>
                         <div class="card-info-wrapper">
                             <div class="card-info">
@@ -94,7 +94,7 @@
         </section>
         <section class="onTop" id="softSkills">
 
-            <h1 data-value="SOFT SKILLS_">BOHG OKPRLL_</h1>
+            <h1 data-value="SOFT SKILLS">BOHG OKPRLL</h1>
 
             <ul>
                 <li>Medalhista Mineiro em Tae-Kwon-Do</li>
