feat: refactor the function hackeranimation

--- a/MySite.html
+++ b/MySite.html
@@ -16,12 +16,12 @@
     <div id="blob"></div>
     <div id="blur"></div>
     <header>
-        <h1 data-value="PROGRAMADOR_">DOUGLAS..SÁ_</h1>
+        <h1 data-delay="1500" data-value="PROGRAMADOR_">DOUGLAS..SÁ_</h1>
     </header>
     <main>
         <section class="onTop" id="AboutMe">
 
-            <h1 data-value="SOBRE MIM_">AMHOPDAZR_</h1>
+            <h1 data-delay="1000" data-value="SOBRE MIM_">AMHOPDAZR_</h1>
 
             <p>Olá, me chamo Douglas! Sou um entusiasta incansável do aprendizado, focado em aprimorar minhas
                 habilidades nas linguagens Java, Javascript, CSS e Angular. Como estudante ávido, estou constantemente
@@ -30,7 +30,7 @@
 
         </section>
         <section class="onTop" id="Projects">
-            <h1 data-value="PROJETOS_">DAVORSTT_</h1>
+            <h1 data-delay="1000" data-value="PROJETOS_">DAVORSTT_</h1>
 
             <div id="cards">
                 <a href="https://dobakay-computers.web.app" target="_blank">
@@ -55,7 +55,7 @@
                 <a href="https://github.com/DobakaySS/Taskapp" target="_blank">
                     <div class="card-content">
                         <div class="card-image">
-                            <img width="300" height="190" src="./habits.jpg"></img>
+                            <img width="300" height="190" src="./Task-App.jpg"></img>
                         </div>
                         <div class="card-info-wrapper">
                             <div class="card-info">
@@ -73,7 +73,7 @@
                 <a href="https://dobakayss.github.io/git-Habits2024/H%C3%A1bitos-%202024.html" target="_blank">
                     <div class="card-content">
                         <div class="card-image">
-                            <img width="300" height="190" src="./Task-App.jpg"></img>
+                            <img width="300" height="190" src="./habits.jpg"></img>
                         </div>
                         <div class="card-info-wrapper">
                             <div class="card-info">
@@ -94,7 +94,7 @@
         </section>
         <section class="onTop" id="softSkills">
 
-            <h1 data-value="SOFT SKILLS">BOHG OKPRLL</h1>
+            <h1 data-delay="1000" data-value="SOFT SKILLS">BOHG OKPRLL</h1>
 
             <ul>
                 <li>Medalhista Mineiro em Tae-Kwon-Do</li>
@@ -108,7 +108,7 @@
 
         <section class="onTop" id="educacao">
 
-            <h1 data-value="EDUCAÇÃO_">MLPOQFCV_</h1>
+            <h1 data-delay="1000" data-value="EDUCAÇÃO_">MLPOQFCV_</h1>
 
             <ol>
                 <li>
